--- a/UserMicroservice/src/main/resources/application.properties
+++ b/UserMicroservice/src/main/resources/application.properties
@@ -3,4 +3,6 @@ server.port=0
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-
+#????? ????? api gataway ???????????? ??????? ?? ?????????
+#????? ??????? ???????? ????? ????? ???? ????????? ????? jar
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
