--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,9 @@
   <packaging>pom</packaging>
 
   <modules>
-
+    <module>UserMicroservice</module>
+    <module>api-gateway</module>
+    <module>eureka-server</module>
   </modules>
 
   <groupId>kg.Sweezy</groupId>
