test jenkins work

--- a/UserMicroservice/src/main/resources/application.properties
+++ b/UserMicroservice/src/main/resources/application.properties
@@ -1,8 +1,5 @@
 spring.application.name=UserMicroservice
-server.port=0
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.config.import=optional:configserver:http://localhost:8888
 
-#????? ????? api gataway ???????????? ??????? ?? ?????????
-#????? ??????? ???????? ????? ????? ???? ????????? ????? jar
-eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+management.endpoints.web.exposure.include= refresh, loggers
